[gd_scene load_steps=2 format=3 uid="uid://b1ccsy2d32i8b"]

[ext_resource type="Script" path="res://example/character_display.gd" id="1_y5dtx"]

[node name="CharacterDisplayContainer" type="VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -138.5
offset_top = -69.0
offset_right = 138.5
grow_horizontal = 2
grow_vertical = 0
alignment = 2
script = ExtResource("1_y5dtx")

[node name="ButtonContainers" type="TabContainer" parent="."]
visible = false
layout_mode = 2
current_tab = 0
tabs_visible = false

[node name="TopLevel" type="VBoxContainer" parent="ButtonContainers"]
layout_mode = 2
metadata/_tab_index = 0

[node name="SkillsButton" type="Button" parent="ButtonContainers/TopLevel"]
layout_mode = 2
text = "Skills"

[node name="Skills" type="VBoxContainer" parent="ButtonContainers"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Targeting" type="VBoxContainer" parent="ButtonContainers"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="CancelTargetingButton" type="Button" parent="ButtonContainers/Targeting"]
layout_mode = 2
text = "Cancel"

[node name="MainPanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainPanelContainer"]
layout_mode = 2
theme_override_constants/separation = 25
alignment = 1

[node name="NameLabel" type="Label" parent="MainPanelContainer/HBoxContainer"]
layout_mode = 2
text = "character name"
uppercase = true

[node name="CapabilitiesContainer" type="VBoxContainer" parent="MainPanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HpContainer" type="HBoxContainer" parent="MainPanelContainer/HBoxContainer/CapabilitiesContainer"]
layout_mode = 2
alignment = 1

[node name="ResourceLabel" type="Label" parent="MainPanelContainer/HBoxContainer/CapabilitiesContainer/HpContainer"]
layout_mode = 2
text = "HP"

[node name="ValueLabel" type="Label" parent="MainPanelContainer/HBoxContainer/CapabilitiesContainer/HpContainer"]
layout_mode = 2
text = "9999/9999"

[node name="MpContainer" type="HBoxContainer" parent="MainPanelContainer/HBoxContainer/CapabilitiesContainer"]
layout_mode = 2
alignment = 1

[node name="ResourceLabel" type="Label" parent="MainPanelContainer/HBoxContainer/CapabilitiesContainer/MpContainer"]
layout_mode = 2
text = "MP"

[node name="ValueLabel" type="Label" parent="MainPanelContainer/HBoxContainer/CapabilitiesContainer/MpContainer"]
layout_mode = 2
text = "9999/9999"

[node name="ApContainer" type="HBoxContainer" parent="MainPanelContainer/HBoxContainer/CapabilitiesContainer"]
layout_mode = 2
alignment = 1

[node name="ResourceLabel" type="Label" parent="MainPanelContainer/HBoxContainer/CapabilitiesContainer/ApContainer"]
layout_mode = 2
text = "AP"

[node name="ValueLabel" type="Label" parent="MainPanelContainer/HBoxContainer/CapabilitiesContainer/ApContainer"]
layout_mode = 2
text = "9999/9999"

[node name="AmmoContainer" type="HBoxContainer" parent="MainPanelContainer/HBoxContainer/CapabilitiesContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="ResourceLabel" type="Label" parent="MainPanelContainer/HBoxContainer/CapabilitiesContainer/AmmoContainer"]
layout_mode = 2
text = "AMMO"

[node name="ValueLabel" type="Label" parent="MainPanelContainer/HBoxContainer/CapabilitiesContainer/AmmoContainer"]
layout_mode = 2
text = "6/6"

[node name="StatusContainer" type="HFlowContainer" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/h_separation = 10
alignment = 1
